Bug Fix: Sales Ticker desformated on small screens

--- a/src/app/shell/components/tickers/tickers.component.scss
+++ b/src/app/shell/components/tickers/tickers.component.scss
@@ -1,6 +1,6 @@
 $tickers-pager-height: 50px;
 $tickers-slides-height: calc(100% - #{$tickers-pager-height});
-$ticker-header-height: 100px;
+$ticker-header-height: 50px;
 $ticker-content-height: calc(100% - #{$ticker-header-height});
 
 .tickers {
@@ -42,17 +42,17 @@ $ticker-content-height: calc(100% - #{$ticker-header-height});
             font-size: 20pt;
             color: #596278;
             position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
+            bottom: 0;
+            line-height: 20px;
         }
     
         .ticker-settings {
-            height: 100%;
+            height: 25px;
             width: 25px;
             position: absolute;
-            top: 50%;
+            
             right: 0;
-            transform: translateY(-50%);
+            bottom: 0;
 
             background-image: url(../../../../assets/shell/ticker_settings.png);
             background-repeat: no-repeat;
